--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-runtime": "^6.11.6",
     "cross-env": "^3.1.4",
     "draft-convert": "^1.2.3",
-    "draft-js": "0.9.1",
+    "draft-js": "^0.10.4",
     "react": "~15.3.0",
     "react-dom": "~15.3.0"
   },
